# transformers-from-scratch

./: .flake8  LICENSE  pyproject.toml  requirements-dev.txt  requirements.txt
src/: attention.py  feed_forward.py  normalization.py  positional_encoding.py  utils.py
src/positional_encoding/: sinusoidal.py
tests/attention/: test_multi_head_attention.py  test_scaled_dot_product.py
tests/feed_forward/: test_position_wise_feed_forward.py
tests/normalization/: test_layer_normalization.py
tests/positional_encoding/: test_sinusoidal.py
