[project]
name = "transformers-from-scratch"
version = "0.0.0a"
dependencies = [
    "torch",
    "numpy",
    "pandas",
    "openpyxl",
]

[project.optional-dependencies]
develop = [
    "black",
    "isort",
    "flake8",
    "pytest",
    "pip-tools",
]

[tool.black]
line_length = 120
exclude = '''
(
  /(
    \.eggs
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | __pycache__
    | _build
    | build
    | dist
  )
)
'''

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
python_files = [
    "test_*.py",
]
testpaths = [
    "tests",
]
